# examples

./: .pre-commit-config.yaml  WGS84_to_HEALPix_Conversion.ipynb  pyproject.toml
.binder/: environment.yml
.github/workflows/: deploy.yml
regridding/: xagg_airtemp_h3.ipynb
visualisation/: _config.yml  _toc.yml  nicam.ipynb  xdggs-demo_icechunk_multilevel.ipynb  xdggs-explore-demo.ipynb  xdggs_ww3_dataset.ipynb
